<resources>
    <string name="app_name">PregnaGrowth</string>

    <!--Login and Signup Activity-->
    <string name="login_title">Selamat datang di PregnaGrowth!</string>
    <string name="login_heading">Yuk masuk terlebih dahulu Moms!</string>
    <string name="signup_heading">Lengkapi data di bawah ini ya Moms!</string>
    <string name="desc_menu_1">Mengukur nutrisi harian Moms agar asupan gizi janin terpenuhi</string>
    <string name="desc_menu_2">Memberikan laporan progres mingguan dan bulanan dari pemasukan nutrisi Moms</string>
    <string name="desc_menu_3">Menyediakan jawaban dari pertanyaan yang sering muncul terkait kehamilan, dari berbagai sumber terpercaya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_signup">Belum punya akun? Daftar</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="signup_to_login">Sudah memiliki akun? Masuk</string>

    <!--Input Activity-->
    <string name="input_description">Silakan jawab terlebih dahulu pertanyaan-pertanyaan ini ya Moms!</string>
    <string name="input_weight">Berapa berat badan Moms sekarang?</string>
    <string name="input_pregnancy_age">Berapa usia kehamilan janin Moms sekarang?</string>
    <string name="input_sleep_hours">Berapa jam Moms tidur setiap malamnya?</string>

    <!--Buttons-->
    <string name="continue_button">LANJUT</string>
    <string name="kg">kilograms</string>
    <string name="week">minggu</string>
    <string name="day">hari</string>
    <string name="login">MASUK</string>
    <string name="signup">DAFTAR</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="less_than_four_hours">Kurang dari 4 jam</string>
    <string name="four_to_six_hours">4-6 jam</string>
    <string name="seven_to_eight_hours">7-8 jam</string>
    <string name="more_than_eight_hours">Lebih dari 8 jam</string>
    <string name="example_weight">50</string>

    <!-- Main Activity -->
    <string name="hello">Halo,</string>
    <string name="dummy_name">Anita Pramela</string>
    <string name="pregnancy_age">Usia Janin</string>
    <string name="dummy_pregnancy_age">50</string>
    <string name="nutrition">NUTRISI</string>
    <string name="dummy_calorie">1500</string>
    <string name="daily_minimum_calorie_first_trimester">/1800 kcal</string>
    <string name="daily_minimum_calorie_second_trimester">/2200 kcal</string>
    <string name="daily_minimum_calorie_third_trimester">/2400 kcal</string>
    <string name="calcium">Kalsium</string>
    <string name="fat">Lemak</string>
    <string name="carbohydrates">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="vitamins">Vitamin</string>
    <string name="daily_nutrition_fulfilled_message">Yeay, kebutuhan nutrisi harian Moms sudah terpenuhi!</string>
    <string name="daily_nutrition_unfulfilled_message">Ayo, jangan lupa penuhi kebutuhan nutrisinya ya Moms!</string>
    <string name="FAQ">FAQ</string>
    <string name="FAQ_description">Pertanyaan-pertanyaan seputar kehamilan untuk referensi Moms</string>

    <!--FAQ Activity-->
    <string name="faq_activity_headings">Dapatkan jawaban dari berbagai sumber terpercaya mengenai pertanyaan yang sering ditanyakan seputar kehamilan!</string>
    <string name="search_bar_heading">Cari Pertanyaan</string>
    <string name="recommendations">Rekomendasi</string>
    <string name="searchbar_hint">Masukkan pertanyaan</string>
    <string name="dummy_question">Apakah hidrasi berpengaruh pada kesehatan janin?</string>
    <string name="dummy_answer">Ibu hamil adalah seorang wanita yang sedang mengandung atau mengalami kehamilan. Kehamilan adalah masa dimana seorang wanita mengandung janin di dalam rahimnya. Kehamilan biasanya berlangsung selama 9 bulan atau 40 minggu. Kehamilan yang berlangsung kurang dari 37 minggu disebut dengan kehamilan prematur atau kehamilan prematur. Sedangkan kehamilan yang berlangsung lebih dari 42 minggu disebut dengan kehamilan postmatur atau kehamilan melewati waktu.</string>

    <!--Daily Intake & Result Activity-->
    <string name="daily_intake_heading">Apa saja yang Moms makan hari ini?</string>
    <string name="breakfast">SARAPAN</string>
    <string name="lunch">MAKAN SIANG</string>
    <string name="dinner">MAKAN MALAM</string>
    <string name="dummy_food">Nasi Goreng</string>
    <string name="dummy_amount"> 5</string>
    <string name="minimum_daily_carbohydrates">/400 g</string>
    <string name="minimum_daily_protein">/90 g</string>
    <string name="minimum_daily_fats">/62,3 g</string>
    <string name="minimum_daily_calcium">/1200 mg</string>
    <string name="grams">g</string>
    <string name="milligrams">mg</string>
    <string name="add">TAMBAH</string>
    <string name="edit">UBAH</string>
    <string name="empty_image_warning">Silakan foto makanan terlebih dahulu.</string>

</resources>