<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_intake.ResultActivity">

    <ImageView
        android:id="@+id/iv_food_result"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_food_result"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_food"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/carbohydrates"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_food_name" />

        <TextView
            android:id="@+id/tv_carbohydrates_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_amount"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_carbohydrates" />

        <TextView
            android:id="@+id/tv_carbohydrates_gram"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/grams"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_carbohydrates_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_carbohydrates" />

        <TextView
            android:id="@+id/tv_calcium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calcium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_carbohydrates_amount" />

        <TextView
            android:id="@+id/tv_calcium_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_amount"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_calcium"/>

        <TextView
            android:id="@+id/tv_calcium_gram"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/grams"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_calcium_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_calcium" />

        <TextView
            android:id="@+id/tv_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/protein"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_calcium_amount" />

        <TextView
            android:id="@+id/tv_protein_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_amount"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protein"/>

        <TextView
            android:id="@+id/tv_protein_gram"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/grams"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_protein_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_protein" />

        <TextView
            android:id="@+id/tv_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protein_amount" />

        <TextView
            android:id="@+id/tv_fats_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_amount"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fats"/>

        <TextView
            android:id="@+id/tv_fats_gram"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/grams"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_fats_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_fats" />

        <TextView
            android:id="@+id/tv_vitamins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vitamins"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fats_amount" />

        <TextView
            android:id="@+id/tv_vitamins_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_amount"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vitamins"/>

        <TextView
            android:id="@+id/tv_vitamins_milligram"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/milligrams"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_vitamins_amount"
            app:layout_constraintTop_toBottomOf="@id/tv_vitamins" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_blue"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vitamins_milligram" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>