<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/blue_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/background_main_example"
        tools:layout_width="match_parent"
        tools:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/blue_rectangle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/rectangle_pregnancy_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="56dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="8dp"
            android:src="@drawable/ic_profile_main"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text= "@string/hello"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@id/iv_profile"/>

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text= "@string/dummy_name"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"/>

        <TextView
            android:id="@+id/tv_pregnancy_age_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="42dp"
            android:text="@string/pregnancy_age"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_pregnancy_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            tools:text="@string/dummy_pregnancy_age"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tv_pregnancy_age_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_pregnancy_age_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>